# dataverse-uploader-python

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  gitattributes.txt  pyproject.toml  requirements.txt
dataverse_uploader/: cli.py
dataverse_uploader/core/: abstract_uploader.py  config.py  exceptions.py
dataverse_uploader/resources/: base.py  file_resource.py
dataverse_uploader/uploaders/: dataverse.py
dataverse_uploader/utils/: http_client.py
docs/: CLI_FIX.md  FEATURE_AUTOMATIC_RETRY.md  FINAL_FIX_ALL_TABULAR.md  FIX_CONFIG_AND_CLI.md  GENERATE_LARGE_FILES.md  INDEX.md  PROJECT_SUMMARY.md
examples/: create_csv_files.py  generate_large_files.py  simple_upload.py
