[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataverse-uploader"
version = "1.4.1"
description = "Command-line bulk uploader for Dataverse repositories"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Organization", email = "contact@example.com"}
]
keywords = ["dataverse", "upload", "repository", "bulk-upload"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",           # Modern HTTP client with connection pooling
    "pydantic>=2.0.0",         # Data validation and settings management
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",           # CLI framework
    "rich>=13.0.0",            # Beautiful terminal output
    "orjson>=3.9.0",           # Fast JSON parsing
    "bagit>=1.8.1",            # BagIt support
    "pyld>=2.0.3",             # JSON-LD processing
    "python-dotenv>=1.0.0",    # Environment configuration
    "tenacity>=8.2.0",         # Retry logic
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
dv-upload = "dataverse_uploader.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataverse_uploader*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=dataverse_uploader --cov-report=term-missing"
